# uspm-old

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  TODO.md  iu.c  iu.h  main.c  manpage  parser.c  parser.h
.github/workflows/: cmake.yml  cmake_2.yml
doc/: 01-Types_of_USPM_Packages.md
docs/: 01-Types_of_USPM_Packages.md  02-Typical_USPM_File.md  03-Typical_Repository_Structure.md  CNAME  README.md
example_docs/html/: annotated.html  annotated_dup.js  chksum_8c_source.html  classes.html  dephandle_8c_source.html  dephandle_8h_source.html  dir_0805e6c805bd855635c036b79a90d941.html  dir_0805e6c805bd855635c036b79a90d941.js  dir_24c61742e84eba33e14b8052a2d3a0d3.html  dir_24c61742e84eba33e14b8052a2d3a0d3.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_66f9565f203981ddb68065565e9834df.html  dir_66f9565f203981ddb68065565e9834df.js  dir_9cdcf30897d3df80edbbd90af671bee6.html  dir_9cdcf30897d3df80edbbd90af671bee6.js  dir_f86be99106b9c9022acf883775262f74.html  dir_f86be99106b9c9022acf883775262f74.js  extended_8c_source.html  files.html  files_dup.js  fm_8c_source.html  fm_8h_source.html  index.html  main_8c_source.html  md__c_h_a_n_g_e_l_o_g.html  md__c_o_d_e__o_f__c_o_n_d_u_c_t.html  md__r_e_a_d_m_e.html  md__t_o_d_o.html  md_docs_01-_types_of__u_s_p_m__packages.html  md_docs_02-_typical__u_s_p_m__file.html  md_docs_03-_typical__repository__structure.html  md_docs__r_e_a_d_m_e.html  md_libuspp__r_e_a_d_m_e.html  mkpkg_8c_source.html  navtreedata.js  navtreeindex0.js  pages.html  struct_memory_struct.html  struct_memory_struct.js  uspm_8c_source.html  (+2 more)
example_docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js
example_docs/latex/: annotated.tex  md__c_h_a_n_g_e_l_o_g.tex  md__c_o_d_e__o_f__c_o_n_d_u_c_t.tex  md__r_e_a_d_m_e.tex  md__t_o_d_o.tex  md_docs_01-_types_of__u_s_p_m__packages.tex  md_docs_02-_typical__u_s_p_m__file.tex  md_docs_03-_typical__repository__structure.tex  md_docs__r_e_a_d_m_e.tex  md_libuspp__r_e_a_d_m_e.tex  refman.tex  struct_memory_struct.tex
example_docs/man/man3/: MemoryStruct.3  md__c_h_a_n_g_e_l_o_g.3  md__c_o_d_e__o_f__c_o_n_d_u_c_t.3  md__r_e_a_d_m_e.3  md__t_o_d_o.3  md_docs_01-_types_of__u_s_p_m__packages.3  md_docs_02-_typical__u_s_p_m__file.3  md_docs_03-_typical__repository__structure.3  md_docs__r_e_a_d_m_e.3  md_libuspp__r_e_a_d_m_e.3
example_docs/rtf/: refman.rtf
example_docs/xml/: 01-_types__of___u_s_p_m___packages_8md.xml  02-_typical___u_s_p_m___file_8md.xml  03-_typical___repository___structure_8md.xml  _c_h_a_n_g_e_l_o_g_8md.xml  _c_make_lists_8txt.xml  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.xml  _r_e_a_d_m_e_8md.xml  _t_o_d_o_8md.xml  chksum_8c.xml  dephandle_8c.xml  dephandle_8h.xml  dir_0805e6c805bd855635c036b79a90d941.xml  dir_24c61742e84eba33e14b8052a2d3a0d3.xml  dir_66f9565f203981ddb68065565e9834df.xml  dir_9cdcf30897d3df80edbbd90af671bee6.xml  dir_f86be99106b9c9022acf883775262f74.xml  docs_2_r_e_a_d_m_e_8md.xml  extended_8c.xml  fm_8c.xml  fm_8h.xml  index.xml  libuspp_2_c_make_lists_8txt.xml  libuspp_2_r_e_a_d_m_e_8md.xml  main_8c.xml  md__c_h_a_n_g_e_l_o_g.xml  md__c_o_d_e__o_f__c_o_n_d_u_c_t.xml  md__r_e_a_d_m_e.xml  md__t_o_d_o.xml  md_docs_01-_types_of__u_s_p_m__packages.xml  md_docs_02-_typical__u_s_p_m__file.xml  md_docs_03-_typical__repository__structure.xml  md_docs__r_e_a_d_m_e.xml  md_libuspp__r_e_a_d_m_e.xml  mkpkg_8c.xml  struct_memory_struct.xml  uspm-dev_2_c_make_lists_8txt.xml  uspm-extra_2_c_make_lists_8txt.xml  uspm-main_2_c_make_lists_8txt.xml  uspm_8c.xml  uspp_8c.xml  (+1 more)
libuspp/: CMakeLists.txt  README.md  config.h  dephandle.c  dephandle.h  fm.c  fm.h  uspm.c  uspm.h  uspp.c  uspp.h
libuspptest/: main.c
uspm/: dephandle.c  dephandle.h  fm.c  fm.h  inunin.c  inunin.h  iu.c  iu.h  main.c  manpage  parser.c  parser.h  uspm.h
uspm-dev/: CMakeLists.txt  chksum.c  makepkg.c  mkpkg.c
uspm-extended/: main.c
uspm-extra/: CMakeLists.txt  extended.c
uspm-main/: CMakeLists.txt  back.c  uspm.1  uspm.c
uspm-mkpkg/: main.c
uspm-test/: CMakeLists.txt  test.c
